--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.scss'
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
@@ -7,5 +8,6 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
+	<h1>My Astro Site</h1>
 	<Welcome />
 </Layout>
