--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<h1>My Astro Site</h1>
+	<a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/blog">Blog</a>
 	<Welcome />
 </Layout>
