--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,22 +1,60 @@
 ---
-import '../styles/global.scss'
-import Layout from '../layouts/Layout.astro';
+const pageTitle = "About Me";
+const identity = {
+    firstName: "Max",
+    country: "Colombia",
+    occupation: "Director of Awesome at Fifi LaBouche",
+    hobbies: ["photography", "rope bondage", "sewing"],
+};
+const skills = ["HTML", "CSS", "UX Design", "Writing" ];
+
+const happy = true;
+const finished = false;
+const goal = 3;
 ---
 
-<Layout>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Astro</title>
+    <title>{pageTitle}</title>
+  </head>
+
 
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="/blog">Blog</a>
 
     <body>
-        <h1>About me</h1>
+        <h1>{pageTitle}</h1>
+
+        <h2>Quick facts</h2>
+
+        <ul>
+            <li>My name is {identity.firstName}.</li>
+            <li>I live in {identity.country}</li>
+            <li>Two of my hobbies are {identity.hobbies[0]} and {identity.hobbies[1]}.</li>
+        </ul>
+
+        <h2>My Skills</h2>
+        <ul>
+            {skills.map((skill) => <li>{skill}</li>)}
+        </ul>
 
         <p>The path that led me to start this blog is a diverse one. I’ve interviewed local artists, musicians and business owners as cohost and producer of the video podcast Creatively Wired. I cofounded the coworking space The Candy Factory in downtown Lancaster. As co-owner of the creative firm Not Bad Design I was part of the team that created complete marketing solutions — including branding ID, websites and promotional videos —  for local nonprofits. I was coproducer for the short documentary “Buy Fresh, Buy Local, By Lancaster.” I have performed in various local, regional and national films, commercials, television shows, and theatrical productions.</p>
 
         <p>I have served on the boards for the theater troupe Creative Works of Lancaster, Pride Lancaster, and Pride Buffalo. I was a producer and director for the web series “Losing Liam,” and worte, produced, and directed my first short film, <em>I Know Where The Bodies Are</em>. in 2017.</p>
 
+        
+
+        {happy && <p>I am happy to be learning Astro!</p> }
+
+        {finished && <p>I finished this tutorial!</p> }
+
+        {goal === 3 ? <p>My goal is to finish in {goal} days.</p> : <p>My goal is not {goal} days.</p> }
+
     </body>
 
 
-</Layout>
+</html>
