--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,14 +1,24 @@
 ---
-import '../styles/global.scss'
-import Layout from '../layouts/Layout.astro';
+const pageTitle = "The Blog"
 ---
 
-<Layout>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>{pageTitle}</title>
+  </head>
 
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="/blog">Blog</a>
 
-    <h1>The Blog</h1>
+    <h1>{pageTitle}</h1>
 
-</Layout>
+    <ul>
+        <li><a href="/posts/post-1">My first blog post</a></li>
+        <li><a href="/posts/post-2">My second blog post</a></li>
+        <li><a href="/posts/post-3">My third blog post</a></li>
+    </ul>
+
+</html>
