Updated content and added new blog post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.scss'
+
 const pageTitle = "Home"
 ---
 
@@ -6,8 +8,7 @@ const pageTitle = "Home"
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Astro</title>
-    <title>{pageTitle}</title>
+    <title>Max Phillips | {pageTitle}</title>
   </head>
 
 	<a href="/">Home</a>
@@ -15,5 +16,7 @@ const pageTitle = "Home"
     <a href="/blog">Blog</a>
 
     <h1>Welcome to my page</h1>
+
+    <p>Tim told me to start a blog. So I’m starting a blog.</p>
 	
 </html>
