--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.scss'
+
 const pageTitle = "About Me";
 const identity = {
     firstName: "Max",
@@ -11,14 +13,28 @@ const skills = ["HTML", "CSS", "UX Design", "Writing" ];
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Astro</title>
-    <title>{pageTitle}</title>
+    <title>Max Phillips | {pageTitle}</title>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+        h1 {
+            color: purple;
+            font-size: 4rem;
+        }
+        .skill {
+            color: var(--skillColor);
+            font-weight: var(--fontWeight);
+            text-transform: var(--textCase);
+        }
+    </style>
   </head>
 
 
@@ -39,7 +55,7 @@ const goal = 3;
 
         <h2>My Skills</h2>
         <ul>
-            {skills.map((skill) => <li>{skill}</li>)}
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
 
         <p>The path that led me to start this blog is a diverse one. I’ve interviewed local artists, musicians and business owners as cohost and producer of the video podcast Creatively Wired. I cofounded the coworking space The Candy Factory in downtown Lancaster. As co-owner of the creative firm Not Bad Design I was part of the team that created complete marketing solutions — including branding ID, websites and promotional videos —  for local nonprofits. I was coproducer for the short documentary “Buy Fresh, Buy Local, By Lancaster.” I have performed in various local, regional and national films, commercials, television shows, and theatrical productions.</p>
