--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.scss'
+
 const pageTitle = "The Blog"
 ---
 
@@ -6,7 +8,7 @@ const pageTitle = "The Blog"
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>{pageTitle}</title>
+    <title>Max Phillips | {pageTitle}</title>
   </head>
 
     <a href="/">Home</a>
@@ -19,6 +21,7 @@ const pageTitle = "The Blog"
         <li><a href="/posts/post-1">My first blog post</a></li>
         <li><a href="/posts/post-2">My second blog post</a></li>
         <li><a href="/posts/post-3">My third blog post</a></li>
+        <li><a href="/posts/post-4">Tim, Fifi, and the long, queer road to recovery</a></li>
     </ul>
 
 </html>
