--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
 import '../styles/global.scss'
 
 const pageTitle = "About Me";
@@ -19,31 +20,7 @@ const fontWeight = "bold";
 const textCase = "uppercase";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Max Phillips | {pageTitle}</title>
-    <style define:vars={{skillColor, fontWeight, textCase}}>
-        h1 {
-            color: purple;
-            font-size: 4rem;
-        }
-        .skill {
-            color: var(--skillColor);
-            font-weight: var(--fontWeight);
-            text-transform: var(--textCase);
-        }
-    </style>
-  </head>
-
-
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
-
-    <body>
-        <h1>{pageTitle}</h1>
+<BaseLayout pageTitle = {pageTitle}>
 
         <h2>Quick facts</h2>
 
@@ -70,7 +47,16 @@ const textCase = "uppercase";
 
         {goal === 3 ? <p>My goal is to finish in {goal} days.</p> : <p>My goal is not {goal} days.</p> }
 
-    </body>
+</BaseLayout>
 
-
-</html>
+<style is:global define:vars={{skillColor, fontWeight, textCase}}>
+    h1 {
+        color: purple;
+        font-size: 4rem;
+    }
+    .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+    }
+</style>
