--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,27 +1,16 @@
 ---
-import '../styles/global.scss'
-
+import BaseLayout from '../layouts/BaseLayout.astro'
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager:true}));
 const pageTitle = "The Blog"
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Max Phillips | {pageTitle}</title>
-  </head>
+<BaseLayout pageTitle = {pageTitle}>
 
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
+  <ul>
+    {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    
+  </ul>
 
-    <h1>{pageTitle}</h1>
+</BaseLayout>
 
-    <ul>
-        <li><a href="/posts/post-1">My first blog post</a></li>
-        <li><a href="/posts/post-2">My second blog post</a></li>
-        <li><a href="/posts/post-3">My third blog post</a></li>
-        <li><a href="/posts/post-4">Tim, Fifi, and the long, queer road to recovery</a></li>
-    </ul>
-
-</html>
