--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,21 +3,6 @@ html {
   font-family: sans-serif;
 }
 
-html.dark {
-  background-color: #0d0950;
-  color: #fff;
-}
-
-.dark {
-  .nav-links a {
-    color: #fff;
-  }
-  a {
-    color: white;
-    font-weight: bold;
-  }
-}
-
 body {
   margin: 0 auto;
   width: 100%;
@@ -35,7 +20,18 @@ h1 {
   font-size: 2.5rem;
 }
 
-/* nav styles */
+a {
+  text-decoration: none;
+  font-size: bold;
+  color: #ea5122;
+
+  &:hover {
+    color: #0d0950;
+  }
+}
+
+// ============== nav styles ================
+
 hamburger {
   padding-right: 20px;
   cursor: pointer;
@@ -92,5 +88,27 @@ hamburger {
   }
   .hamburger {
     display: none;
+  }
+}
+
+
+// ============== dark styles ================
+
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark {
+  .nav-links a {
+    color: #fff;
+  }
+  a {
+    color: #fff;
+    font-weight: bold;
+
+    &:hover {
+      color: #b7b5d7;
+    }
   }
 }
