--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -91,6 +91,17 @@ hamburger {
   }
 }
 
+hr {
+  opacity: .5;
+  margin-block: 4rem;
+}
+
+
+.footnotes {
+  opacity: .7;
+  margin-block-end: 3rem;
+}
+
 
 // ============== dark styles ================
 
