--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,6 @@
 ---
-import Social from "./Social.astro";
-const platform = "github";
-const userName = "Maxtana";
+import { socials } from "../data/socials"
+import { Icon } from 'astro-icon/components'
 ---
 
 
@@ -9,19 +8,49 @@ const userName = "Maxtana";
 <footer>
     <hr>
     <div class="footer__content">
-        <p>Learn more about my projects on <a href={`https://www.${platform}.com/${userName}`}>{platform}</a>!</p>
-        <Social platform="bsky" username="maxtana" />
-        <Social platform="github" username="maxtana" />
-        <Social platform="youtube" username="maxtana" />
+
+        <ul>
+            {socials.map(({ name, url, icon }) => (
+              <li>
+                <a href={url} target="_blank" rel="noopener noreferrer">
+                  <Icon name={icon} width="2em" height="2em" alt="" aria-hidden="true" /> 
+                  {name}
+                </a>
+              </li>
+            ))}
+          </ul>
+
     </div>
 
 </footer>
 
 <style>
-      .footer__content {
+
+    footer {
+        margin-block-end: 5rem;
+    }
+    
+    ul{
         display: flex;
         align-items: center;
-        gap: 1rem;
-        margin-top: 2rem;
+        justify-content: center;
+        gap: 2rem;
+        margin-top: 2rem;  
+        list-style: none;
+        padding: 0;
+        border: 0;
     }
+
+    li {
+        padding: 0;
+        margin: 0;
+        a {
+            display: flex;
+            align-items: center;
+            gap: .25em;
+
+        }
+
+    }
+    
 </style>
