--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,12 @@
+:root {
+  --clr-dark: #4c1d95;
+  --clr-accent: #ff9776;
+  --clr-link: #00539F;
+  --clr-white: #fff;
+  --clr-neutral-200: #a1a1a1;
+  --clr-neutral-100: #F8FCFD;
+}
+
 html {
   background-color: #f1f5f9;
   font-family: sans-serif;
@@ -18,6 +27,7 @@ body {
 h1 {
   margin: 1rem 0;
   font-size: 2.5rem;
+  line-height: 1;
 }
 
 a {
