--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,26 +1,8 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import '../styles/global.scss'
-
-const pageTitle = "About Me";
-const identity = {
-    firstName: "Max",
-    country: "Colombia",
-    occupation: "Director of Awesome at Fifi LaBouche",
-    hobbies: ["photography", "rope bondage", "sewing"],
-};
-const skills = ["HTML", "CSS", "UX Design", "Writing" ];
-
-const happy = true;
-const finished = true;
-const goal = 3;
-
-const skillColor = "navy";
-const fontWeight = "bold";
-const textCase = "uppercase";
 ---
 
-<BaseLayout pageTitle = {pageTitle}>
+<BaseLayout pageTitle = "About Me" >
 
         <p>The path that led me to start this blog is a diverse one. I’ve interviewed local artists, musicians and business owners as cohost and producer of the video podcast <em>Creatively Wired</em>. I cofounded the coworking space <a href="https://candyissweet.com">The Candy Factory</a> in downtown Lancaster. As co-owner of the creative firm Not Bad Design I was part of the team that created complete marketing solutions—including branding ID, websites and promotional videos—for local nonprofits. I was coproducer for the short documentary <em><a href="https://www.imdb.com/title/tt1841530/">Buy Fresh, Buy Local, By Lancaster</a>.</em> I have performed in various local, regional and national films, commercials, television shows, and theatrical productions. I served on the boards of the theater troupe <a href="https://creativelancaster.org">Creative Works of Lancaster</a>, <a href="https://www.lancasterpride.org">Lancaster Pride</a>, and <a href="https://buffalopride.org">Buffalo Pride</a>. I was a producer and director for the web series “Losing Liam,” and worte, produced, and directed my first short film, <em><a href="https://youtu.be/KIBHw05Ifu4?si=VAabCVGijmP_LPQJ">I Know Where The Bodies Are</a></em>. in 2017.</p>
 
