--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,22 @@
 ---
-import Navigation from "./Navigation.astro";
 import Hamburger from "./Hamburger.astro";
+import Navigation from "./Navigation.astro";
 import ThemeIcon from "./ThemeIcon.astro";
+
 ---
 
 <header>
     <nav>
         <Hamburger />
-        <ThemeIcon />
         <Navigation />
+        <ThemeIcon />
     </nav>
 </header>
+
+<style>
+    nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+</style>
