Major updates to colors and colror themes

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,18 +1,24 @@
 :root {
-  --clr-dark: #4c1d95;
-  --clr-accent: #ff9776;
-  --clr-link-drk: #00539F;
-  --clr-blue-lt: #00bfff;
+  --clr-dark: #2b303a;
+  --clr-accent: #ea7317;
+  --clr-accent-2: #fec601;
+  --clr-accent-3: #3da5d9;
+  --clr-accent-4: #73bfb8;
   --clr-white: #fff;
+  --clr-neutral-300: #576175;
   --clr-neutral-200: #a1a1a1;
-  --clr-neutral-100: #F8FCFD;
+  --clr-neutral-100: #f1f5f9;
 
-  --clr-link: var(--clr-link-drk);
+  --clr-link: var(--clr-dark);
   --clr-hover: var(--clr-accent);
+  --clr-surface: var(--clr-dark);
+  --clr-text: var(--clr-dark);
+
 }
 
 html {
-  background-color: #f1f5f9;
+  background-color: var(--clr-neutral-100);
+  color: var(--clr-text);
   font-family: sans-serif;
 }
 
@@ -59,10 +65,10 @@ hr {
 blockquote {
   display: grid;
   gap: 0.5em;
-  border-left: 4px solid var(--clr-link);
-  background-color: var(--clr-neutral-100);
+  border-left: 4px solid var(--clr-accent-3);
+  background-color: var(--clr-white);
   padding: 1em;
-  margin: 1em 0;
+  margin: 1.5em 0;
   border-radius: 0.5em;
 
   p {
@@ -85,7 +91,7 @@ blockquote strong {
   border-radius: 1em;
   padding: .1em 1em;
   font-size: .75em;
-  background-color: var(--clr-dark);
+  background-color: var(--clr-accent-3);
 
   a {
       color: var(--clr-white);
@@ -100,7 +106,7 @@ blockquote strong {
 // ============== dark styles ================
 
 html.dark {
-  background-color: #0d0950;
+  background-color: var(--clr-surface);
   color: var(--clr-white);
 }
 
@@ -110,11 +116,19 @@ html.dark {
     font-weight: bold;
 
     &:hover {
-      --clr-hover: var(--clr-accent);
+      --clr-hover: var(--clr-accent-2);
     }
   }
 
+  .tag {
+
+  &:hover,
+  &:focus-visible {
+    background-color: var(--clr-accent-2);
+  }
+  }
+
   blockquote {
-    background: var(--clr-dark);
+    background-color: var(--clr-neutral-300);
   }
 }
