--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -2,10 +2,9 @@
 import BaseLayout from "../../layouts/BaseLayout.astro";
 const allPosts = Object.values(import.meta.glob('../posts/*.md', { eager: true }));
 const tags = [...new Set(allPosts.map((post: any) => post.frontmatter.tags).flat())];
-const pageTitle = "Tag Index";
 ---
 
-<BaseLayout pageTitle={pageTitle}>
+<BaseLayout pageTitle={"Tag Index"}>
 
         <div class="tags">
             {tags
