--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -31,8 +31,6 @@
 }
 }
 
-
-
 .expanded {
   display: unset;
 }
@@ -51,7 +49,7 @@
   }
 
   .hamburger {
-        display: none;
+        display: none !important;
     }
 }
 
