--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -9,15 +9,16 @@
 
 <style>
     .hamburger {
-        padding-right: 20px;
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        gap: .2em;
         cursor: pointer;
+        width: 30px;
+        height: 20px;
     }
 
     .hamburger .line {
-        display: block;
-        width: 40px;
-        height: 5px;
-        margin-bottom: 10px;
-        background-color: #ff9776;
+        border-radius: 1rem;
+        background-color: var(--clr-hover);
     }
 
