fixed hamburger size shift

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -43,7 +43,7 @@ import { Icon } from 'astro-icon/components';
         padding: 0;
         border: 0;
 
-        @include respond(md) {
+        @include respond(sm) {
           flex-direction: row;
         }
     }
