--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -9,6 +9,7 @@
 
 <style>
     .hamburger {
+        flex-shrink: 0;
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         gap: .2em;
