--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import ThemeIcon from "./ThemeIcon.astro";
 <style>
     nav {
         display: flex;
-        align-items: top;
+        align-items: start;
         justify-content: space-between;
     }
 </style>
