--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,12 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
-import { formatDate } from "../scripts/formatDate";
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager:true}));
+import FormattedDate from '../components/FormattedDate.astro'
+import { getCollection } from 'astro:content';
+
+const posts = (await getCollection('blog')).sort(
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+);
+
 const pageTitle = "Max Phillips"
 ---
 
@@ -10,18 +15,15 @@ const pageTitle = "Max Phillips"
   <ul >
     <!-- sorts posts newest on top -->
 
-      {allPosts
-        .sort((a: any, b: any) => 
-          new Date(b.frontmatter.pubDate).getTime() - new Date(a.frontmatter.pubDate).getTime()
-        )
-        .map((post: any) => (
+      {
+        posts.map((post) => (
           <li>
-            <div class="date">{formatDate(post.frontmatter.pubDate)}</div>
-            <p><a href={post.url}>{post.frontmatter.title}</a></p>
-            <small>{post.frontmatter.description}</small>
+            <div class="date"><FormattedDate date={post.data.pubDate} /></div>
+            <p><a href={`/blog/${post.id}/`}>{post.data.title}</a></p>
+            <small>{post.data.description}</small>
           </li>
         ))
-        }
+      }
     
   </ul>
 
